# CosmoSpaceShip

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
CosmoSpaceShip/: CosmoSpaceShip.sln
CosmoSpaceShip/CosmoSpaceShip/: CosmoSpaceShip.vcxproj  CosmoSpaceShip.vcxproj.filters
CosmoSpaceShip/CosmoSpaceShip/Src/: AssetManager.cpp  AssetManager.h  CS_types.h  Camera.h  Collision.cpp  Collision.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  ResolutionSettings.h  Sounds.cpp  Sounds.h  Stack.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
CosmoSpaceShip/CosmoSpaceShip/Src/ECS/: Animation.h  ColliderComponent.h  Components.h  Constants.h  ECS.cpp  ECS.h  FigthComponent.h  HealthComponent.h  KeyboardController.cpp  KeyboardController.h  LogicComponent.cpp  LogicComponent.h  Menu.h  ProjectileComponent.h  ScoreComponent.h  SpriteComponent.h  TileComponent.h  TimingComponent.h  TransformComponent.h  UILabel.h  Weapons.cpp  Weapons.h
CosmoSpaceShip/CosmoSpaceShip/assets/: space_map.map  space_map_16_9.map
CosmoSpaceShipTest/: CMakeLists.txt  CommonTest.h  FieldTest.cpp  IGameTest.cpp  MultiplayerModeTest.cpp  PlayerTest.cpp  SingleModeTest.cpp  testmain.cpp
assets/: someasstes.txt
docs/: somedocs.txt
scripts/: assets.db  init_db.sql
src/: CMakeLists.txt  main.cpp
src/CoreGame/: somelogic.txt
src/Engine/: someengine.txt
src/UI/: someui.txt
src/Utils/: AssetManager.h  Singletone.h
